# something_pinkish

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: google_search.py
src/google_s/: arg.py  fjäder-från-en-katt-2021-07-04.csv  google_search.py
src/just_some_pkg_chauwa.egg-info/: PKG-INFO  SOURCES.txt
