[metadata]
name = just-some-pkg-chauwa
version = 0.0.1
author = Martin K
author_email = mrtn.karlsson@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ch4uwa/something_pinkish
project_urls =
    Bug Tracker = https://github.com/Ch4uwa/something_pinkish/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src